# lal-auto-essay-scoring2

./: .gitignore  README.md  cv_table.csv  cv_vs_lb.csv  note.md  plot_corre.py  plot_cv_corr.py  plot_cv_corr_3d.py  pyproject.toml  refelctions.md  reflections.md  solution.md
exp/exp181/: config.yaml  cv_record.csv
exp/exp186/: config.yaml  cv_record.csv
exp/exp187/: config.yaml  cv_record.csv
exp/exp188/: config.yaml  cv_record.csv
exp/exp197/: config.yaml  cv_record.csv
exp/expD012/: config.yaml
notebook/: lal-aes2-create-discourse.ipynb  lal-aes2-create-prompt-data.ipynb  lal-aes2-create-tokened-text.ipynb  lal-aes2-infer-discourse.ipynb  lal-aes2-infer-prompt-name.ipynb  lal-aes2-train-discourse.ipynb  lal-aes2-train-lgbm.ipynb  lal-aes2-train-prompt-name.ipynb  lal-aes2-train-tokend-text.ipynb
src/lal_auto_essay_scoring2/: __init__.py
